--- a/preprocessing/S1_Pan_neuro_integrated.Rmd
+++ b/preprocessing/S1_Pan_neuro_integrated.Rmd
@@ -2,7 +2,7 @@
 title: "Neuro_Droso_ND75KD - Generating integrated dataset including both Pan_neuro_control and Pan_neuro_ND75KD Seurat objects"
 author: "Vincent Gardeux"
 date_created: "2023-05-12"
-date_modified: "2024-09-25"
+date_modified: "2024-10-21"
 output:
   html_document:
     df_print: paged
@@ -21,7 +21,10 @@ In this script, I will analyze the Pan Neuro ND75-KD single-cell RNA-seq dataset
 
 ```{r}
 suppressPackageStartupMessages(library(Seurat, lib.loc = "/home/gardeux/.R/lib/")) # Seurat v4.4.0, library for single-cell analysis
+suppressPackageStartupMessages(library(SeuratObject, lib.loc = "/home/gardeux/.R/lib/")) # For compatibility purpose
 suppressPackageStartupMessages(library(crayon)) # Just for bolding the console output :D
 
 cat(bold("Seurat"), "version", as.character(packageVersion("Seurat")), "\n")
+cat(bold("SeuratObject"), "version", as.character(packageVersion("Seurat")), "\n")
 ```
+
