Correct minor things

--- a/preprocessing/S0a_Pan_neuro_control.Rmd
+++ b/preprocessing/S0a_Pan_neuro_control.Rmd
@@ -33,8 +33,11 @@ cat(bold("data.table"), "version", as.character(packageVersion("data.table")), "
 ## Parameters
 
 ```{r}
-output_10x <- "./data/Pan_neuro_control.h5"
-project_name <- "Pan_neuro_control"
+input_10x_path <- "./data/Pan_neuro_control.h5"
+input_gene_mapping_path <- "./data/dmel-r6.58_GFP.gtf.all.exon.length.txt"
+
+output_seurat_path <- "./data/Pan_neuro_control.rds"
+output_project_name <- tools::file_path_sans_ext(basename(output_seurat_path))
 ```
 
 ## I. Parsing
@@ -43,7 +46,7 @@ First step is to read 10X files and create a Seurat object
 
 ```{r}
 # Here, put the path of the 10x count matrix (output of cellranger)
-data.seurat <- CreateSeuratObject(Read10X_h5(output_10x), project=project_name)
+data.seurat <- CreateSeuratObject(Read10X_h5(input_10x_path), project=output_project_name)
 message(ncol(data.seurat), " cells were loaded")
 message(nrow(data.seurat), " genes were loaded")
 ```
@@ -54,7 +57,7 @@ message(nrow(data.seurat), " genes were loaded")
 
 ```{r}
 # Read gene mapping
-data.gene.mapping <- fread("./data/dmel-r6.58_GFP.gtf.all.exon.length.txt", header = T, sep = "\t", data.table = F)
+data.gene.mapping <- fread(input_gene_mapping_path, header = T, sep = "\t", data.table = F)
 rownames(data.gene.mapping) <- data.gene.mapping$Ensembl
 # I know that Mitochondrial genes start with mt: in the Drosophila assembly that I'm using
 mt.genes <- rownames(data.gene.mapping)[startsWith(data.gene.mapping$Name, "mt:")]
@@ -150,5 +153,5 @@ DimPlot(data.seurat, reduction = "tsne")
 
 # Saving the Seurat object
 ```{r}
-saveRDS(data.seurat, file =  paste0("./data/", project_name, ".rds"))
+saveRDS(data.seurat, file = output_seurat_path)
 ```
