Update final scripts of preprocessing

--- a/preprocessing/S2a_Pan_neuro_integrated_Oxphos_scoring_AUCell.ipynb
+++ b/preprocessing/S2a_Pan_neuro_integrated_Oxphos_scoring_AUCell.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GENE_SIGNATURE_FNAME = '/data/gardeux/Neuro_Droso_ND75KD/data/Oxphos_genes.xlsx'\n",
+    "GENE_SIGNATURE_FNAME = './data/Oxphos_genes.xlsx'\n",
     "GENE_SIGNATURE_SNAME = 'Flybase - GO Oxidative Phosphor'\n",
-    "EXPRESSION_MTX_FNAME = '/data/gardeux/Neuro_Droso_ND75KD/data/Pan_neuro_integrated.loom' # Gene expression as (cell, gene) - matrix."
+    "EXPRESSION_MTX_FNAME = './data/Pan_neuro_integrated.loom' # Gene expression as (cell, gene) - matrix."
    ]
   },
   {
@@ -1127,7 +1127,7 @@
    "outputs": [],
    "source": [
     "# Save DataFrame to TSV file\n",
-    "aucs.to_csv(\"/data/gardeux/Neuro_Droso_ND75KD/data/Pan_neuro_integrated_117_Oxphos_AUCell_auc.tsv\", sep='\\t', index=True)"
+    "aucs.to_csv(\"./data/Pan_neuro_integrated_117_Oxphos_AUCell_auc.tsv\", sep='\\t', index=True)"
    ]
   }
  ],
